--- a/lokis-public/assets/css/lokis-public-style.css
+++ b/lokis-public/assets/css/lokis-public-style.css
@@ -154,8 +154,7 @@ button#lokis-submit-btn:hover {
 
 /* For lokis game answer */
 div#lokis-feedback {
-  width: 100%;
-  max-width: 455px;
+  max-width: 78%;
   margin: 0 auto;
   padding-right: 20px;
 }
@@ -374,7 +373,6 @@ li.lokis-active {
 .lokisloop-hosted-game .lokisloop-container-wrapper,
 .lokisloop-completed-games-container {
   padding: 30px;
-  /* width: 100%; */
 }
 
 .lokisloop-dashboard-container {
@@ -677,18 +675,10 @@ input#lokisLoop_expiration:focus,
 
 .lokis-modal-box {
   position: absolute;
-
   z-index: 10000;
-  /* 1 */
-
-  /* top: 0; */
-
   left: 0;
-
   visibility: hidden;
-
   width: 100%;
-
   height: 100%;
 }
 
@@ -735,7 +725,7 @@ input#lokisLoop_expiration:focus,
 
   margin-left: -16em;
 
-  background-color: #fff;
+  background-color: var(--lokis-white-color);
 
   box-shadow: 0 0 1.5em hsla(0, 0%, 0%, 0.35);
 }
@@ -788,7 +778,7 @@ input#lokisLoop_expiration:focus,
 }
 
 .lokis-modal-close:hover {
-  color: #0693e3;
+  color: var(--lokis-primarybtn-color);
 }
 
 .lokis-modal-heading {
@@ -1089,11 +1079,6 @@ button.btn.btn-primary.mb-3 {
   border-radius: 5px 0 0 5px;
 }
 
-/* .lokisloop-dashboard-container .lokisloop-hosted-game .lokis-loop-correct,
-.lokisloop-dashboard-container .lokisloop-hosted-game .lokis-loop-incorrect {
-  margin-top: 15px;
-  text-align: center;
-} */
 .lokis-loop-alert {
   margin-top: 10px;
   margin-left: 44px;
@@ -1518,11 +1503,5 @@ input#lokis-rememberme {
       calc(100vw - 8 * var(--global--spacing-horizontal)),
       1240px
     );
-  }
-}
-
-@media only screen and (max-width: 1074px) {
-  .lokis-post-form {
-    display: grid;
   }
 }
