--- a/lokis-admin/assets/css/lokis-admin-style.css
+++ b/lokis-admin/assets/css/lokis-admin-style.css
@@ -1,109 +1,87 @@
 /* CSS for lokis-games-settings.php */
-
 .lookisloop-navbar-item {
   display: flex;
-
   justify-content: space-between;
-
   align-items: center;
 }
-
 .lookisloop-navbar-item img.lokisloop-logo {
   width: 25%;
-
   margin-left: 12px;
 }
-
 img.lokisloop-footer-logo {
   width: 35%;
-
   filter: brightness(0);
-
   height: 3vh;
-
   margin-right: 18px;
 }
-
 .lokis-game-wrap {
   background-color: white;
-
   width: 50%;
-
   padding: 20px 10px;
-
   margin: 0 auto;
-
   margin-top: 30px;
 }
-
 .lokis-game-setting {
   padding: 10px;
 }
-
 .lokis-game-wrap h1 {
   text-align: center;
-
   color: #252627;
 }
-
-.lokis-inputpage {
+.settings-options {
   padding: 5px;
-
   font-size: 1rem;
-
-  margin-top: 10px;
+  /* margin-top: 20px; */
 }
-
+.lokis-settings-title {
+  font-weight: bold;
+  position: relative;
+  top: 50px;
+}
 .lokis-game-wrap select {
   width: 100%;
-
   max-width: 100%;
-
   background-color: #e8eeef;
-
   border-color: #e8eeef;
-
   padding: 10px;
-
   font-size: 1rem;
 }
-
 .lokis-game-wrap #loki-submit {
   width: 100%;
-
   max-width: 100%;
-
   background-color: #4dc972;
-
   color: white;
-
   border-color: #4dc972;
-
   padding: 8px;
-
   font-size: 1rem;
 }
-
+.lokis-game-wrap #loki-submit-content {
+  width: 100%;
+  max-width: 100%;
+  background-color: #4dc972;
+  color: white;
+  border-color: #4dc972;
+  padding: 8px;
+  font-size: 1rem;
+}
 .wp-core-ui .lokis-game-wrap select:focus {
   border-color: #e8eeef;
-
   color: #000000;
-
   box-shadow: 0 0 0 1px #e8eeef;
 }
-
 .wp-core-ui .lokis-game-wrap select:hover {
   color: #252627;
 }
-
 .lokis-formquestion-item .lokisloop-selective-box {
   display: block;
 }
-
 @media only screen and (max-width: 782) {
   .lokis-game-wrap {
     width: 85%;
   }
 }
-
 /* End off  CSS for lokis-games-settings.php */
+.lokis-puzzle-metafield-wrapper textarea,
+.lokis-puzzle-metafield-wrapper input {
+  margin-bottom: 10px;
+}
